development progression chart moment

--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/SummaryDevelopment.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/SummaryDevelopment.razor
@@ -1,4 +1,4 @@
-﻿@using SimTECH.Pages.Seasons.Overview.Development.Components;
+﻿@using SimTECH.Pages.Seasons.Overview.Development.Dialogs.Components;
 @using SimTECH.PageModels.Seasons.Development;
 
 <MudDialog>
