--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopSettings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopSettings.razor
@@ -6,7 +6,7 @@
             <MudChip Color="Color.Dark" Value="0L" Default="true" Class="flex-1">All</MudChip>
             @foreach (var raceClass in RaceClasses)
             {
-                <MudChip Color="Color.Dark" Value="@raceClass.Id" Class="flex-1">@raceClass.Name</MudChip>
+                <MudChip Color="Color.Dark" Value="@raceClass.Id" Class="flex-1">@raceClass.Tag</MudChip>
             }
         </MudChipSet>
     </MudStack>
