Generalizing a bunch of code

--- a/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
@@ -180,7 +180,7 @@
                                     Style="height: 200px; width: 250px">
                             @foreach (var aspect in rangeables)
                             {
-                                <MudChip Text="@aspect.ReadableAspect()"
+                                <MudChip Text="@aspect.GetReadableAspect()"
                                          Value="@aspect"
                                          Color="Color.Secondary"
                                          Style="width: 100px" />
