--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopSettings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopSettings.razor
@@ -28,24 +28,24 @@
         <MudText Typo="Typo.subtitle1">Target</MudText>
     </MudTooltip>
     <MudChipSet SelectedChipChanged="TargetChipChanged" Mandatory="true" Class="d-flex flex-row">
-        <MudChip Color="Color.Secondary" Value="Aspect.Reliability" Default="true" Class="flex-1">@Aspect.Reliability.ShortReadableAspect()</MudChip>
+        <MudChip Color="Color.Secondary" Value="Aspect.Reliability" Default="true" Class="flex-1">@Aspect.Reliability.GetShortAspectText()</MudChip>
 
         @if (DevelopModel.ActiveEntrant == Entrant.Driver)
         {
-            <MudChip Color="Color.Secondary" Value="Aspect.Skill" Class="flex-1">@Aspect.Skill.ShortReadableAspect()</MudChip>
-            <MudChip Color="Color.Secondary" Value="Aspect.Attack" Class="flex-1">@Aspect.Attack.ShortReadableAspect()</MudChip>
-            <MudChip Color="Color.Secondary" Value="Aspect.Defense" Class="flex-1">@Aspect.Defense.ShortReadableAspect()</MudChip>
+            <MudChip Color="Color.Secondary" Value="Aspect.Skill" Class="flex-1">@Aspect.Skill.GetShortAspectText()</MudChip>
+            <MudChip Color="Color.Secondary" Value="Aspect.Attack" Class="flex-1">@Aspect.Attack.GetShortAspectText()</MudChip>
+            <MudChip Color="Color.Secondary" Value="Aspect.Defense" Class="flex-1">@Aspect.Defense.GetShortAspectText()</MudChip>
         }
         else if (DevelopModel.ActiveEntrant == Entrant.Team)
         {
-            <MudChip Color="Color.Secondary" Value="Aspect.BaseCar" Class="flex-1">@Aspect.BaseCar.ShortReadableAspect()</MudChip>
-            <MudChip Color="Color.Secondary" Value="Aspect.Aero" Class="flex-1">@Aspect.Aero.ShortReadableAspect()</MudChip>
-            <MudChip Color="Color.Secondary" Value="Aspect.Chassis" Class="flex-1">@Aspect.Chassis.ShortReadableAspect()</MudChip>
-            <MudChip Color="Color.Secondary" Value="Aspect.Powertrain" Class="flex-1">@Aspect.Powertrain.ShortReadableAspect()</MudChip>
+            <MudChip Color="Color.Secondary" Value="Aspect.BaseCar" Class="flex-1">@Aspect.BaseCar.GetShortAspectText()</MudChip>
+            <MudChip Color="Color.Secondary" Value="Aspect.Aero" Class="flex-1">@Aspect.Aero.GetShortAspectText()</MudChip>
+            <MudChip Color="Color.Secondary" Value="Aspect.Chassis" Class="flex-1">@Aspect.Chassis.GetShortAspectText()</MudChip>
+            <MudChip Color="Color.Secondary" Value="Aspect.Powertrain" Class="flex-1">@Aspect.Powertrain.GetShortAspectText()</MudChip>
         }
         else if (DevelopModel.ActiveEntrant == Entrant.Engine)
         {
-            <MudChip Color="Color.Secondary" Value="Aspect.Engine" Class="flex-1">@Aspect.Engine.ShortReadableAspect()</MudChip>
+            <MudChip Color="Color.Secondary" Value="Aspect.Engine" Class="flex-1">@Aspect.Engine.GetShortAspectText()</MudChip>
         }
     </MudChipSet>
 </MudStack>
