--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/WeightedDevelopRanges.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/WeightedDevelopRanges.razor
@@ -16,7 +16,7 @@
                 @foreach (var aspectRange in AspectRanges)
                 {
                     <MudPaper>
-                        <MudText Typo="Typo.subtitle1">@aspectRange.Key.ReadableAspect()</MudText>
+                        <MudText Typo="Typo.subtitle1">@aspectRange.Key.GetReadableAspect()</MudText>
                         <MudSimpleTable>
                             <thead>
                                 <tr>
