--- a/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/AddEngines.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/AddEngines.razor
@@ -2,7 +2,7 @@
 
 <MudContainer MaxWidth="MaxWidth.Small">
     <MudPaper Elevation="15">
-        <MudText Color="Color.Tertiary">Amount engines: @(Model.BaseEngines.Count)</MudText>
+        <MudText Color="Color.Tertiary">Engines selected: @(Model.BaseEngines.Count)</MudText>
         <MudTable T="Engine"
                   Items="@Engines"
                   @ref="_table"
@@ -17,7 +17,8 @@
                 <MudTd DataLabel="Name">@context.Name</MudTd>
             </RowTemplate>
             <PagerContent>
-                <MudPagination SelectedChanged="PageChange" Count="@((_table.GetFilteredItemsCount() + _table.RowsPerPage - 1) / _table.RowsPerPage)"
+                <MudPagination SelectedChanged="PageChange"
+                               Count="@((_table.GetFilteredItemsCount() + _table.RowsPerPage - 1) / _table.RowsPerPage)"
                                Variant="Variant.Outlined"
                                Class="pa-4" />
             </PagerContent>
